<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/search_tv_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/search_tab_card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/card_name_label" />

        <TextView
            android:id="@+id/search_card_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/card_type_label" />

    </LinearLayout>


    <ImageView
        android:id="@+id/search_card_set"
        android:contentDescription="@string/card_set_label"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:scaleType="centerInside"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_alignParentRight="true"/>

    <LinearLayout
        android:id="@+id/mana_cost_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/incolor_cost_img"
            android:contentDescription="@string/incolor_cost_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/first_mana_color_img"
            android:contentDescription="@string/mana_cost_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/second_mana_color_img"
            android:contentDescription="@string/mana_cost_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/third_mana_color_img"
            android:contentDescription="@string/mana_cost_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/four_mana_color_img"
            android:contentDescription="@string/mana_cost_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>